# AgentOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/agentos-base/: Dockerfile  capabilities.json
docs/: README.md  algorithms-data-structures.md  architecture.md  codex-plugin-instructions.md  context-efficiency.md  database-spec.md  diagrams.md  docker-storage-plan.md  exhibition-demo-script.md  functional-spec.md  plugin-api.md  requirements.md  review-response-schema.md  sandbox-threat-model.md  setup-linux-wsl.md  system-flow.md  technical-plan.md
docs/design/: algorithms-data-structures.md  architecture.md  context-efficiency.md  requirements.md  scope-boundary.md  technical-plan.md
docs/guides/: demo-script.md  exhibition-demo-script.md  first-real-run.md  launch-checklist.md  setup-linux-wsl.md
docs/project-ops/: DECISIONS.md  GOAL.md  NEXT.md  RISKS.md  ROUTINE.md  STATUS.md  VALIDATION.md
docs/reference/: database-spec.md  plugin-api.md
docs/security/: docker-storage-plan.md  sandbox-threat-model.md
plugins/agentos-workspace/: .mcp.json  README.md  (+2 more)
prototype/: README.md
scripts/: sample-e2e.sh  wsl-smoke.sh
tests/: test_approval_scope.py  test_approvals.py  test_cli.py  test_contracts.py  test_default_paths.py  test_mcp_server.py  test_platform_checks.py  test_plugin_spec.py  test_review.py  test_runtime_hardening.py  test_sync_hardening.py
(+110 files in other folders)
